--- a/entradas/static/entradas/style.css
+++ b/entradas/static/entradas/style.css
@@ -88,20 +88,22 @@ p.center {
   padding: 8px 8px;
 }
 
-.view-image {
-	width: 40vw;
-	max-width: 300px;
-	min-width: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 2em;
-}
-
 .view-chiquito {
 	width: 40vw;
 	max-width: 200px;
 	min-width: 100px;
   display: block;
   margin-bottom: 2em;
+}
+
+.center-image{
+  display:flex;
+  justify-content:center; /* horizontally center */
+  align-items:center;    /* vertically center */
+  height:300px;
+}
+
+.center-image img{
+ max-width:300px;
+ min-width: 100px;
 }
