--- a/entradas/templates/entradas/detail.html
+++ b/entradas/templates/entradas/detail.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block description %}
-{{ entrada.texto_entrada | truncatewords_html:50 | safe}} 
+{{ entrada.texto_entrada | striptags | truncatewords:50}} 
 {% endblock %}
 
 
