--- a/entradas/templates/entradas/detail.html
+++ b/entradas/templates/entradas/detail.html
@@ -12,7 +12,9 @@ YOU ARE X'D
 {% endblock %}
 
 {% block ogtitle %}
-{% if user.is_authenticated and not entrada.visible_entrada or entrada.visible_entrada %}
+{% if entrada.titulo_entrada|length == 0%}
+drumsoverbogota
+{% elif user.is_authenticated and not entrada.visible_entrada or entrada.visible_entrada %}
 {{ entrada.titulo_entrada}} - drumsoverbogota
 {% else %}
 No permitido - drumsoverbogota
@@ -21,7 +23,7 @@ No permitido - drumsoverbogota
 
 {% block description %}
 {% if user.is_authenticated and not entrada.visible_entrada or entrada.visible_entrada %}
-{{ entrada.texto_entrada | striptags | truncatewords:50}}
+{{ entrada.texto_entrada | youtube_clean | striptags | truncatewords:50}}
 {% else %}
 No permitido
 {% endif %}
@@ -29,11 +31,15 @@ No permitido
 
 
 {% block imagen %}
-{% if entrada.imagen_entrada %}
-{% buildfullurl entrada.imagen_entrada.url %}
-{% else %}
-{% fullstatic "entradas/default.gif" %}
-{% endif %}
+    {% if entrada.imagen_entrada %}
+        {% buildfullurl entrada.imagen_entrada.url %}
+    {% else %}
+        {% if entrada.texto_entrada|youtube_first_image == '' %}
+            {% fullstatic "entradas/default.gif" %}
+        {% else %}
+            {{entrada.texto_entrada | youtube_first_image}}
+        {% endif %}
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -47,11 +53,11 @@ No permitido
                     <a href="{{ entrada.imagen_entrada.url }}">
                         <div class="center-image">
                             <img src='{{ entrada.imagen_entrada.url }}'>
-                    </div>
+                        </div>
                     </a>
                     {% endif %}
 
-                    {{ entrada.texto_entrada | safe }}
+                    {{ entrada.texto_entrada | youtube_embed | safe }}
 
                     {% if user.is_authenticated %}
                     <div align=right>
